syntax = "proto3";

package deployments;

message ERC20Deployment {
  string address = 1;
  string name = 2;
  string symbol = 3;
  string total_supply = 4;
  string decimals = 5;
  string blocknumber = 6;
  int64 timestamp_seconds = 7;
}

message ERC721Deployment {
  string address = 1;
  string name = 2;
  string symbol = 3;
  string blocknumber = 5;
  int64 timestamp_seconds = 6;
}